# boba

./: .rubocop.yml  CONTRIBUTING.md  Cargo.toml  README.md  Rakefile  aliases.js  crates.js  deny.toml  help.html  package-lock.json  package.json  search-index.js  settings.html  source-files.js  src-files.js
.circleci/: config.yml
.config/: artichoke.dic
.github/: dependabot.yml  labels.json  labels.yaml
.github/workflows/: audit.yaml  bench.yaml  ci.yaml  code-coverage.yaml  fuzz.yaml  repo-labels.yaml  rustdoc.yaml
benches/: benchmarks.rs  comparison.rs
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
boba/: all.html  enum.DecodeError.html  fn.decode.html  fn.encode.html  index.html  sidebar-items.js
bstr/: all.html  fn.B.html  fn.decode_last_utf8.html  fn.decode_utf8.html  index.html  sidebar-items.js  struct.BStr.html  struct.BString.html  struct.Bytes.html  struct.CharIndices.html  struct.Chars.html  struct.Fields.html  struct.FieldsWith.html  struct.Find.html  struct.FindReverse.html  struct.Finder.html  struct.FinderReverse.html  struct.Lines.html  struct.LinesWithTerminator.html  struct.Split.html  struct.SplitN.html  struct.SplitNReverse.html  struct.SplitReverse.html  struct.Utf8Chunk.html  struct.Utf8Chunks.html  struct.Utf8Error.html  trait.ByteSlice.html
bubblebabble/: all.html  enum.DecodeError.html  fn.decode.html  fn.encode.html  index.html  sidebar-items.js
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode.rs  encode.rs  roundtrip.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
memchr/memmem/: enum.Prefilter.html  fn.find.html  fn.find_iter.html  fn.rfind.html  fn.rfind_iter.html  index.html  struct.FindIter.html  struct.FindRevIter.html  struct.Finder.html  struct.FinderBuilder.html  struct.FinderRev.html
spec/: Bubble_Babble_Encoding.txt
src/: decode.rs  encode.rs  lib.rs
src/boba/: decode.rs.html  encode.rs.html  lib.rs.html
src/bstr/: ascii.rs.html  bstr.rs.html  bstring.rs.html  cow.rs.html  ext_slice.rs.html  ext_vec.rs.html  impls.rs.html  io.rs.html  lib.rs.html  utf8.rs.html
src/bstr/byteset/: mod.rs.html  scalar.rs.html
src/bstr/search/: byte_frequencies.rs.html  mod.rs.html  prefilter.rs.html  twoway.rs.html
src/bubblebabble/: lib.rs.html
src/memchr/: cow.rs.html  fallback.rs.html  iter.rs.html  lib.rs.html  naive.rs.html
src/memchr/memchr/: fallback.rs.html  iter.rs.html  mod.rs.html  naive.rs.html
src/memchr/memchr/x86/: avx.rs.html  mod.rs.html  sse2.rs.html
src/memchr/memmem/: byte_frequencies.rs.html  genericsimd.rs.html  mod.rs.html  rabinkarp.rs.html  rarebytes.rs.html  twoway.rs.html  util.rs.html  vector.rs.html
src/memchr/memmem/prefilter/: fallback.rs.html  genericsimd.rs.html  mod.rs.html
src/memchr/memmem/prefilter/x86/: avx.rs.html  (+2 more)
src/memchr/memmem/x86/: avx.rs.html  mod.rs.html  sse.rs.html
src/memchr/x86/: avx.rs.html  mod.rs.html  sse2.rs.html
tests/: version_numbers.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
(+7 files in other folders)
