[package]
name = "boba"
version = "4.2.0" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/boba"
documentation = "https://docs.rs/boba"
homepage = "https://github.com/artichoke/boba"
description = "Encoder and decoder for the Bubble Babble binary data encoding"
keywords = ["encode", "decode", "utf8", "bubblebabble", "no_std"]
categories = ["encoding", "no-std"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]
default = ["std"]
# Enable dependency on `std`, the Rust standard library. This feature enables
# `std::error::Error` implementations on the error types in `boba`.
std = ["alloc"]
# Enable a dependency on the `alloc` crate. This feature grants `boba` access to
# the `Vec` and `String` types. This feature is currently required to build
# `boba`, but exists to enable adding a slice-based, no allocator API in a
# backwards-compatible way.
alloc = []

[dependencies]
# `no_std` mode was fixed in https://github.com/BurntSushi/bstr/commit/83e8f27e
bstr = { version = "0.2.4", default-features = false }

[dev-dependencies]
bubblebabble = "0.1"
version-sync = "0.9"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `boba` has the same API and code on all targets.
targets = ["x86_64-unknown-linux-gnu"]
