[package]
name = "boba"
version = "4.3.1" # remember to set `html_root_url` in `src/lib.rs`.
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
license = "MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/artichoke/boba"
documentation = "https://docs.rs/boba"
homepage = "https://github.com/artichoke/boba"
description = "Encoder and decoder for the Bubble Babble binary data encoding"
keywords = ["encode", "decode", "utf8", "bubblebabble", "no_std"]
categories = ["encoding", "no-std"]
include = ["src/**/*", "tests/**/*", "LICENSE", "README.md"]

[features]
default = ["std"]
# Enable dependency on `std`, the Rust standard library. This feature enables
# `std::error::Error` implementations on the error types in `boba`.
std = []

[dependencies]

[dev-dependencies]

# Check that crate versions are properly updated in documentation and code when
# bumping the version.
[dev-dependencies.version-sync]
version = "0.9.3"
default-features = false
features = ["markdown_deps_updated", "html_root_url_updated"]

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `boba` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
